--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
             <p>An integrated wallet feature for MintCoinCrypto is coming soon.</p>
         </section>
     </main>
+<section id="ticker">
+    <h2>Cryptocurrency Ticker</h2>
+    <ul>
+        <li><strong>ETH:</strong> $3,500</li>
+        <li><strong>BTC:</strong> $40,000</li>
+        <li><strong>XRP:</strong> $1.50</li>
+    </ul>
+</section>
     <footer>
         <p>&copy; 2024 MintCoinCrypto. All rights reserved.</p>
     </footer>
