--- a/index.html
+++ b/index.html
@@ -12,22 +12,54 @@
     </header>
     
     <main>
+        <!-- Abstract section -->
         <section id="abstract">
             <h2>Abstract</h2>
-            <!-- Abstract content here -->
+            <p>The MintCoin project aims to introduce a novel decentralized cryptocurrency, built on the Ethereum blockchain, designed to address the shortcomings of traditional digital currencies and provide a more efficient, secure, and sustainable alternative.</p>
         </section>
         
+        <!-- Introduction section -->
         <section id="introduction">
             <h2>Introduction</h2>
-            <!-- Introduction content here -->
+            <h3>Background</h3>
+            <p>In recent years, the proliferation of cryptocurrencies has led to increased interest in digital assets as a means of value exchange. However, existing cryptocurrencies face several challenges, including scalability issues, environmental concerns, and centralization risks.</p>
+            <h3>Purpose</h3>
+            <p>MintCoin seeks to address these challenges by leveraging the Ethereum blockchain to create a decentralized and deflationary cryptocurrency that offers fast, secure, and environmentally friendly transactions.</p>
         </section>
 
-        <section id="about">
-            <h2>About MintCoinCrypto</h2>
-            <!-- About MintCoin content here -->
+        <!-- Technology Overview section -->
+        <section id="technology">
+            <h2>Technology Overview</h2>
+            <h3>Ethereum Blockchain</h3>
+            <p>MintCoin is built on the Ethereum blockchain, utilizing its smart contract functionality to enable secure and transparent transactions. By leveraging Ethereum's robust infrastructure, MintCoin ensures reliability and interoperability within the broader blockchain ecosystem.</p>
+            <h3>Deflationary Mechanism</h3>
+            <p>MintCoin implements a deflationary mechanism, where a percentage of each transaction is burned, reducing the total supply of tokens over time. This scarcity model is designed to increase the value of MintCoin and incentivize long-term holding.</p>
         </section>
 
-        <!-- Add other sections/content here -->
+        <!-- Features section -->
+        <section id="features">
+            <h2>Features</h2>
+            <h3>Integrated Wallet</h3>
+            <p>MintCoin will soon introduce an integrated wallet feature, providing users with a convenient and secure way to store, manage, and transact with MintCoin tokens. The wallet will support multiple cryptocurrencies, allowing for seamless cross-chain transactions.</p>
+            <h3>Cross-Platform Compatibility</h3>
+            <p>MintCoin is designed to be compatible with various platforms and devices, including desktop computers, mobile devices, and web browsers. This ensures accessibility and usability for a wide range of users worldwide.</p>
+        </section>
+
+        <!-- Tokenomics section -->
+        <section id="tokenomics">
+            <h2>Tokenomics</h2>
+            <h3>Total Supply</h3>
+            <p>MintCoin has a fixed total supply of 10 billion tokens, ensuring scarcity and value preservation over time.</p>
+            <h3>Distribution</h3>
+            <p>The initial distribution of MintCoin tokens will be conducted through a fair and transparent process, with opportunities for community participation and engagement.</p>
+        </section>
+
+        <!-- Roadmap section -->
+        <section id="roadmap">
+            <h2>Roadmap</h2>
+            <h3>Development Milestones</h3>
+            <p>The MintCoin project will follow a comprehensive roadmap, outlining key milestones and development phases. This includes the implementation of additional features, such as decentralized governance and cross-chain interoperability.</p>
+        </section>
 
         <!-- Connect Wallet button -->
         <button onclick="connectWallet()">Connect Wallet with MetaMask</button>
