--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MintCoinCrypto</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+    <style>
+        /* CSS for black font */
+        body {
+            color: #000;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -12,9 +18,9 @@
     </header>
     
     <main>
-        <!-- Abstract section -->
-        <section id="abstract">
-            <h2>Abstract</h2>
+        <!-- MintCoinCrypto section -->
+        <section id="mintcoincrypto">
+            <h2>MintCoinCrypto</h2>
             <p>The MintCoin project aims to introduce a novel decentralized cryptocurrency, built on the Ethereum blockchain, designed to address the shortcomings of traditional digital currencies and provide a more efficient, secure, and sustainable alternative.</p>
         </section>
         
