--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     </style>
 </head>
 <body>
+    <div class="banner">
+        <p>Important Announcement: MintCoinCrypto is now live! Learn more <a href="#mintcoincrypto">here</a>.</p>
+    </div>
+
     <header>
         <h1>MintCoinCrypto</h1>
     </header>
